--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,1 +1,7 @@
 server = "https://api.robinhood.com/"
+
+akka {
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  loglevel = "TRACE"
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+}
