--- a/angular-client/package.json
+++ b/angular-client/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^6.0.2",
     "core-js": "^2.5.4",
     "highcharts": "^6.1.1",
+    "highcharts-angular": "^2.0.1",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
@@ -32,7 +33,6 @@
     "@angular/cli": "~6.0.2",
     "@angular/compiler-cli": "^6.0.2",
     "@angular/language-service": "^6.0.2",
-    "@types/highcharts": "^5.0.23",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -41,7 +41,7 @@
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.2",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~1.4.2",
+    "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
