--- a/angular-client/package.json
+++ b/angular-client/package.json
@@ -18,10 +18,10 @@
     "@angular/core": "^6.0.2",
     "@angular/forms": "^6.0.2",
     "@angular/http": "^6.0.2",
-    "@angular/material": "^6.2.1",
     "@angular/platform-browser": "^6.0.2",
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "highcharts": "^6.1.1",
     "highcharts-angular": "^2.0.1",
