--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <akka.http.version>10.1.3</akka.http.version>
         <upickle.version>0.6.6</upickle.version>
         <jetty.version>9.4.8.v20180619</jetty.version>
+        <sttp.version>1.3.0-RC4</sttp.version>
     </properties>
 
     <dependencies>
@@ -72,6 +73,21 @@
             <version>${jetty.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.softwaremill.sttp</groupId>
+            <artifactId>core_${scala.version.major}</artifactId>
+            <version>${sttp.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.softwaremill.sttp</groupId>
+            <artifactId>akka-http-backend_${scala.version.major}</artifactId>
+            <version>${sttp.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.softwaremill.sttp</groupId>
+            <artifactId>json4s_${scala.version.major}</artifactId>
+            <version>${sttp.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-http_${scala.version.major}</artifactId>
             <version>${akka.http.version}</version>
@@ -113,12 +129,12 @@
             <artifactId>scala-library</artifactId>
             <version>${scala.version}</version>
         </dependency>
+<!--
         <dependency>
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-http-spray-json_${scala.version.major}</artifactId>
             <version>${akka.http.version}</version>
         </dependency>
-<!--
         <dependency>
             <groupId>com.lihaoyi</groupId>
             <artifactId>upickle_${scala.version.major}</artifactId>
@@ -178,12 +194,6 @@
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-reflect</artifactId>
             <version>${scala.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jsoup</groupId>
-            <artifactId>jsoup</artifactId>
-            <version>1.11.3</version>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 
