--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,3 +5,57 @@ akka.http {
     max-open-requests = 512
   }
 }
+
+dow {
+  MMM  = "https://api.robinhood.com/instruments/d3aa8b83-b8a3-4a86-acb2-0c22061cd7e8/"
+  AXP  = "https://api.robinhood.com/instruments/af3c1d59-612e-400e-b0c2-7e47ebc126bd/"
+  AAPL = "https://api.robinhood.com/instruments/450dfc6d-5510-4d40-abfb-f633b7d9be3e/"
+  BA   = "https://api.robinhood.com/instruments/ae7f719c-ba1a-4207-8d94-af40fb7310f8/"
+  CAT  = "https://api.robinhood.com/instruments/4a4bf458-6a5c-4f74-9c5d-1a4b5b08482e/"
+  CVX  = "https://api.robinhood.com/instruments/7a6a30e2-cf4d-40dd-8baa-0cea48de85e4/"
+  CSCO = "https://api.robinhood.com/instruments/8a9fe49d-5d0a-4040-a19b-f3f4df44408f/"
+  KO   = "https://api.robinhood.com/instruments/bb9a01df-5982-42d4-88db-8662f23cdab5/"
+  DIS  = "https://api.robinhood.com/instruments/2ed64ef4-2c1a-44d6-832d-1be84741dc41/"
+  DWDP = "https://api.robinhood.com/instruments/b4f560bd-65c4-414c-a249-abf8eb9a91a8/"
+  XOM  = "https://api.robinhood.com/instruments/9133b38b-4917-4b5a-8eab-c029d60f9912/"
+  GS   = "https://api.robinhood.com/instruments/801a9500-8a61-4e1c-ae76-0beb4a135fb1/"
+  HD   = "https://api.robinhood.com/instruments/599dd133-44d3-4c1e-b992-eb08b7ab7faa/"
+  IBM  = "https://api.robinhood.com/instruments/ae2e4ada-197d-42a4-825c-aff01cc3a8dd/"
+  INTC = "https://api.robinhood.com/instruments/ad059c69-0c1c-4c6b-8322-f53f1bbd69d4/"
+  JNJ  = "https://api.robinhood.com/instruments/fd0c2695-e591-4c28-bdf7-068895ae3b14/"
+  JPM  = "https://api.robinhood.com/instruments/43c1172a-9130-420a-ac9b-b01a6ff5dd54/"
+  MCD  = "https://api.robinhood.com/instruments/41eac3c6-f7f7-4c4a-b696-ab9d1b913981/"
+  MRK  = "https://api.robinhood.com/instruments/25055233-cdb6-4e80-99f2-13ed1ce5a30a/"
+  MSFT = "https://api.robinhood.com/instruments/50810c35-d215-4866-9758-0ada4ac79ffa/"
+  NKE  = "https://api.robinhood.com/instruments/aec9d597-9fdb-4393-af8b-da2019e2c179/"
+  PFE  = "https://api.robinhood.com/instruments/6ec6c70e-d686-4d73-b5a8-74fec96aca0e/"
+  PG   = "https://api.robinhood.com/instruments/1520c0c0-7b1f-4464-9b5e-800a2a3ce29f/"
+  TRV  = "https://api.robinhood.com/instruments/982363e9-64bb-4685-848a-601929664e5c/"
+  UTX  = "https://api.robinhood.com/instruments/573f5d40-f2b6-4a35-b141-b1eeeaa8b4b9/"
+  UNH  = "https://api.robinhood.com/instruments/1abfbfc7-6c65-4ded-8a97-1e7f82220b64/"
+  VZ   = "https://api.robinhood.com/instruments/6957592c-ace4-41f4-98f1-1b3a3a54a7dd/"
+  V    = "https://api.robinhood.com/instruments/93495afe-b84b-4664-881c-b6361b0edeef/"
+  WMT  = "https://api.robinhood.com/instruments/ad1edbfb-19c8-4939-be66-1f09bd65b902/"
+  WBA  = "https://api.robinhood.com/instruments/f66018f3-7e46-498e-8ed2-27e2a36eb26e/"
+}
+// stocks of interest
+soi {
+  CY   = "https://api.robinhood.com/instruments/cfa64e84-2864-45e7-aac9-fd02e7d1e369/"
+  ON   = "https://api.robinhood.com/instruments/dad8fa2c-1e8d-4cb9-b354-1f0b91a4193e/"
+  AMAT = "https://api.robinhood.com/instruments/18006bfb-cbad-4326-8348-738c94ea47fa/"
+  BAC  = "https://api.robinhood.com/instruments/0dd811b3-7047-448d-96e0-7bf6ee4cfe45/"
+  VALE = "https://api.robinhood.com/instruments/6bb4c9af-a06a-4f28-8f69-b4f3a0ce8da7/"
+  BB   = "https://api.robinhood.com/instruments/62823dfa-199d-4b1d-9842-b34ce40485bd/"
+  HTZ  = "https://api.robinhood.com/instruments/8e08c691-869f-482c-8bed-39d026215a85/"
+  SWKS = "https://api.robinhood.com/instruments/1b183c9b-0383-46b8-bf68-4a9808ef0ceb/"
+  IYK  = "https://api.robinhood.com/instruments/803c3b0e-00cf-4b39-bcb6-1458f42c4038/"
+  NLY  = "https://api.robinhood.com/instruments/45fab9d0-a740-4271-a2cf-f44edc2770a2/"
+  IBM  = "https://api.robinhood.com/instruments/ae2e4ada-197d-42a4-825c-aff01cc3a8dd/"
+  CNSL = "https://api.robinhood.com/instruments/5a371e45-bf7e-49da-8d46-4dc92dc84bcc/"
+  NVAX = "https://api.robinhood.com/instruments/12e429a8-f78d-4b0c-9f46-bf12fa6a32fb/"
+  RRD  = "https://api.robinhood.com/instruments/b6b5d7a2-6273-4900-81f3-10befeb16f6b/"
+  NAVI = "https://api.robinhood.com/instruments/50074f15-91f0-4ed7-8c45-eca04ed6907d/"
+  AHC  = "https://api.robinhood.com/instruments/3d9a6798-df9e-4e29-90e3-3184f2379471/"
+  T    = "https://api.robinhood.com/instruments/2b456f6a-3287-4757-abf9-327383d2c708/"
+  GECC = "https://api.robinhood.com/instruments/bb143408-610f-4c2b-a552-e20fed01d766/"
+}
