--- a/src/main/resources/stock.conf
+++ b/src/main/resources/stock.conf
@@ -121,6 +121,7 @@ soi {
   SMTA  = ${I}/344ca5ba-dd82-42f7-98a0-0528ee396aa4/
   WH    = ${I}/81121f11-a968-4064-b012-63fc8af9e97b/
   CVIA  = ${I}/52b39774-3707-45ac-86e9-7bc9de8397e7/
+  RY    = ${I}/2a78aaf4-0702-4a2a-8375-0a3703aa24b6/
   CPLG  = ${I}/571098b7-7fc8-4e87-afe1-8398f885adb9/
   HSRT  = ${I}/5a422063-3aaf-47d6-a8b7-24c7a7596a22/
   PACQ  = ${I}/ca54997f-1a63-405b-bcc3-94c201cb24c6/
@@ -1524,6 +1525,9 @@ soi {
   GAA   = ${I}/72bb16d5-3cc9-4745-8601-01397d30c948/
   LC    = ${I}/f315d3aa-7948-4204-8286-1144a9aac17e/
   VALX  = ${I}/68796e49-e3eb-4c28-8fad-780ecbe8ee6f/
+  VALE  = ${I}/6bb4c9af-a06a-4f28-8f69-b4f3a0ce8da7/
+  LYG   = ${I}/c7741741-989b-46f8-ab84-a4ba934e7601/
+  SJR   = ${I}/32c3d2a7-80c8-425c-a224-58f46732192a/
   DBEZ  = ${I}/d8637bbc-67c6-40f5-86c2-dad7dbae41e4/
   CRBN  = ${I}/e986b68a-ef7e-4007-8ea0-d722b2f57a20/
   XSOE  = ${I}/f33c35a1-af3d-43be-bfd3-3905814a51d4/
@@ -5776,4 +5780,5 @@ soi {
   SPR   = ${I}/258dbaf2-8f3a-4fac-a40e-0b6f086e18c4/
   SPY   = ${I}/8f92e76f-1e0e-4478-8580-16a6ffcfaef5/
   UGE   = ${I}/08c418ea-41a1-4ca4-8127-2fb924999b09/
+  BB    = ${I}/62823dfa-199d-4b1d-9842-b34ce40485bd/
 }
