--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -40,3 +40,5 @@ dow {
   WMT  = ${I}/ad1edbfb-19c8-4939-be66-1f09bd65b902/
   WBA  = ${I}/f66018f3-7e46-498e-8ed2-27e2a36eb26e/
 }
+
+error-prone-stocks = "MFA,LOAN,LYG,CBL,AHC,NVAX"
