--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <scala.version.major>2.12</scala.version.major>
         <scala.version.minor>6</scala.version.minor>
         <scala.version>${scala.version.major}.${scala.version.minor}</scala.version>
-        <akka.version>2.5.14</akka.version>
+        <akka.version>2.5.15</akka.version>
         <akka.http.version>10.1.3</akka.http.version>
         <upickle.version>0.6.6</upickle.version>
         <jetty.version>9.4.8.v20180619</jetty.version>
@@ -253,6 +253,37 @@
                         <arg>-unchecked</arg>
                     </args>
                 </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.1.1</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <shadedArtifactAttached>true</shadedArtifactAttached>
+                            <shadedClassifierName>fat</shadedClassifierName>
+                            <artifactSet>
+                                <includes>
+                                    <include>*:*</include>
+                                </includes>
+                            </artifactSet>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                    <resource>reference.conf</resource>
+                                </transformer>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <manifestEntries>
+                                        <Main-Class>home.sparkjava.Main</Main-Class>
+                                    </manifestEntries>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
