--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,11 @@
         <scala.version.major>2.12</scala.version.major>
         <scala.version.minor>6</scala.version.minor>
         <scala.version>${scala.version.major}.${scala.version.minor}</scala.version>
-        <akka.version>2.5.15</akka.version>
+        <akka.version>2.5.16</akka.version>
         <akka.http.version>10.1.3</akka.http.version>
         <upickle.version>0.6.6</upickle.version>
         <jetty.version>9.4.8.v20180619</jetty.version>
-        <sttp.version>1.3.0-RC5</sttp.version>
+        <sttp.version>1.3.0</sttp.version>
         <google.calendar.version>1.23.0</google.calendar.version>
     </properties>
 
@@ -223,7 +223,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
+                <version>3.8.0</version>
                 <configuration>
                     <release>${java.version}</release>
                 </configuration>
@@ -231,7 +231,7 @@
                     <dependency>
                         <groupId>org.ow2.asm</groupId>
                         <artifactId>asm</artifactId>
-                        <version>6.1.1</version>
+                        <version>6.2.1</version>
                     </dependency>
                 </dependencies>
             </plugin>
