--- a/src/main/resources/stock.conf
+++ b/src/main/resources/stock.conf
@@ -5780,5 +5780,5 @@ soi {
   SPR   = ${I}/258dbaf2-8f3a-4fac-a40e-0b6f086e18c4/
   SPY   = ${I}/8f92e76f-1e0e-4478-8580-16a6ffcfaef5/
   UGE   = ${I}/08c418ea-41a1-4ca4-8127-2fb924999b09/
-  BB    = ${I}/62823dfa-199d-4b1d-9842-b34ce40485bd/
+  PBR   = ${I}/223ece33-6e21-4a00-a849-e55252a4451a/
 }
