--- a/src/main/resources/stock.conf
+++ b/src/main/resources/stock.conf
@@ -5781,4 +5781,5 @@ soi {
   SPY   = ${I}/8f92e76f-1e0e-4478-8580-16a6ffcfaef5/
   UGE   = ${I}/08c418ea-41a1-4ca4-8127-2fb924999b09/
   PBR   = ${I}/223ece33-6e21-4a00-a849-e55252a4451a/
+  SITC  = ${I}/3cd47a68-d67a-4a0c-ac5b-af3950b1745c/
 }
