--- a/src/main/resources/stock.conf
+++ b/src/main/resources/stock.conf
@@ -1,6 +1,11 @@
 I = "https://api.robinhood.com/instruments"
 
 soi {
+  CBS {
+    instrument = ${I}/b1a116c4-458d-4baa-9da5-10361d0e74b8/
+    name = "CBS Corporation Class B"
+    simple_name = "CBS"
+  }
   KMB {
     instrument = ${I}/8cdd3bb0-d16f-4603-a43a-d97f42281de4/
     name = "Kimberly-Clark Corp."
