--- a/src/main/resources/stock.conf
+++ b/src/main/resources/stock.conf
@@ -28746,4 +28746,9 @@ soi {
     name = "Easterly Government Properties, Inc."
     simple_name = "Easterly Government Properties"
   }
+  KORS {
+    instrument = ${I}/4048d6e0-16b6-450f-8e45-0886ec6713e9/
+    name = "MICHAEL KORS HOLDINGS LIMITED"
+    simple_name = "Michael Kors"
+  }
 }
