--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,13 @@
       <artifactId>json4s-native_${scala.version.major}</artifactId>
       <version>3.6.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
