--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-reflect</artifactId>
+      <version>${scala.version}</version>
+    </dependency>
+
+    <dependency>
       <groupId>com.typesafe.akka</groupId>
       <artifactId>akka-http_${scala.version.major}</artifactId>
       <version>${akka.http.version}</version>
@@ -132,7 +138,7 @@
                 </transformer>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <manifestEntries>
-                    <Main-Class>home.MainScala</Main-Class>
+                    <Main-Class>home.Main</Main-Class>
                   </manifestEntries>
                 </transformer>
               </transformers>
