--- a/src/main/resources/stock.conf
+++ b/src/main/resources/stock.conf
@@ -3766,4 +3766,70 @@ soi {
     name = "Carrizo Oil & Gas, Inc. Common Stock"
     simple_name = "Carrizo Oil & Gas"
   }
+//get rid of the following stocks as soon as possible
+  IYK {
+    instrument = ${I}/803c3b0e-00cf-4b39-bcb6-1458f42c4038/
+    name = "iShares U.S. Consumer Goods ETF"
+    simple_name = "iShares Dow Jones US Consumer Goods Sector Index Fund"
+  }
+  BOE {
+    instrument = ${I}/bdfddf3d-89b0-4b7f-8948-976eb7933f25/
+    name = "BlackRock Enhanced Global Dividend Trust"
+    simple_name = "BlackRock Enhanced Global Dividend Trust"
+  }
+  AHC {
+    instrument = ${I}/3d9a6798-df9e-4e29-90e3-3184f2379471/
+    name = "A.H. Belo Corporation"
+    simple_name = "A. H. Belo"
+  }
+  LOAN {
+    instrument = ${I}c90b9566-105c-4ad6-9d1b-db172233963d/
+    name = "Manhattan Bridge Capital, Inc"
+    simple_name = "Manhattan Bridge Capital"
+  }
+  GECC {
+    instrument = ${I}/bb143408-610f-4c2b-a552-e20fed01d766/
+    name = "Great Elm Capital Corp. Common Stock"
+    simple_name = "Great Elm Capital"
+  }
+  RY {
+    instrument = ${I}/2a78aaf4-0702-4a2a-8375-0a3703aa24b6/
+    name = "Royal Bank of Canada"
+    simple_name = "Royal Bank of Canada"
+  }
+  UNIT {
+    instrument = ${I}/12d7e341-8fb6-4cdf-a03c-b99bf70085bb/
+    name = "Uniti Group Inc. Common Stock"
+    simple_name = "Uniti Group"
+  }
+  NYMT {
+    instrument = ${I}/abecb592-bd1f-444e-9474-9abd88eb753b/
+    name = "New York Mortgage Trust, Inc. Common Stock"
+    simple_name = "New York Mortgage Trust"
+  }
+  SUN {
+    instrument = ${I}/4d4bef61-89e9-4562-a5a3-c4fbad62c09b/
+    name = "SUNOCO L.P."
+    simple_name = "Sunoco"
+  }
+  AEE {
+    instrument = ${I}/6a51457e-2765-451c-868b-6d0c5dcd7448/
+    name = "Ameren Corporation"
+    simple_name = "Ameren"
+  }
+  SPH {
+    instrument = ${I}/6833bfaa-31d2-4f2d-be17-fe56b4de317f/
+    name = "Suburban Propane Partners L P"
+    simple_name = "Suburban Propane"
+  }
+  SITC {
+    instrument = ${I}/3cd47a68-d67a-4a0c-ac5b-af3950b1745c/
+    name = "SITE Centers Corp. Common Shares"
+    simple_name = "SITE Centers Corp"
+  }
+  LMT {
+    instrument = ${I}/fbfbfb83-373a-4601-8094-6179a2a1942c/
+    name = "Lockheed Martin Corp."
+    simple_name = "Lockheed Martin"
+  }
 }
