--- a/src/main/resources/stock.conf
+++ b/src/main/resources/stock.conf
@@ -3783,7 +3783,7 @@ soi {
     simple_name = "A. H. Belo"
   }
   LOAN {
-    instrument = ${I}c90b9566-105c-4ad6-9d1b-db172233963d/
+    instrument = ${I}/c90b9566-105c-4ad6-9d1b-db172233963d/
     name = "Manhattan Bridge Capital, Inc"
     simple_name = "Manhattan Bridge Capital"
   }
