--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -152,6 +152,29 @@ dow {
   }
 }
 
+akka {
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  loglevel = "DEBUG"
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+
+  io {
+    dns {
+      inet-address {
+        positive-ttl = forever
+        negative-ttl = forever
+      }
+    }
+  }
+
+  host-connection-pool {
+    max-open-requests = 128
+  }
+}
+
 server = "https://api.robinhood.com"
-Authorization = "Token xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
-AccountNumber = XXXXXXXX
+authorization {
+  username = "xxx"
+  encryptedPassword = "xxx"
+  key = "xxx"
+}
+AccountNumber = "5RY82436"
