--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,10 @@
     <scala.version>${scala.version.major}.${scala.version.minor}</scala.version>
     <akka.version>2.5.19</akka.version>
     <akka.http.version>10.1.7</akka.http.version>
-    <sttp.version>1.5.4</sttp.version>
+    <sttp.version>1.5.6</sttp.version>
     <jetty.version>9.4.14.v20181114</jetty.version>
     <junit.version>5.3.2</junit.version>
+    <junit.platform.launcher>1.3.2</junit.platform.launcher>
   </properties>
 
   <dependencies>
@@ -96,13 +97,19 @@
     <dependency> <!-- https://sttp.readthedocs.io/en/latest/examples.html -->
       <groupId>org.json4s</groupId>
       <artifactId>json4s-native_${scala.version.major}</artifactId>
-      <version>3.6.0</version>
+      <version>3.6.3</version>
     </dependency>
 
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
       <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.platform</groupId>
+      <artifactId>junit-platform-launcher</artifactId>
+      <version>${junit.platform.launcher}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
