--- a/src/main/resources/stock.conf
+++ b/src/main/resources/stock.conf
@@ -3832,4 +3832,9 @@ soi {
     name = "Lockheed Martin Corp."
     simple_name = "Lockheed Martin"
   }
+  CPRI {
+    instrument = ${I}/552aedf0-af4b-4693-8825-cbee56a685bc/
+    name = "Capri Holdings Limited"
+    simple_name = "Capri Holdings"
+  }
 }
