--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>home</groupId>
-  <artifactId>playing-with-utest</artifactId>
+  <artifactId>akka-only</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <properties>
