--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <scala.version.major>2.12</scala.version.major>
     <scala.version.minor>8</scala.version.minor>
     <scala.version>${scala.version.major}.${scala.version.minor}</scala.version>
-    <akka.version>2.5.19</akka.version>
+    <akka.version>2.5.20</akka.version>
     <akka.http.version>10.1.7</akka.http.version>
     <sttp.version>1.5.6</sttp.version>
     <jetty.version>9.4.14.v20181114</jetty.version>
@@ -110,6 +110,18 @@
       <groupId>org.junit.platform</groupId>
       <artifactId>junit-platform-launcher</artifactId>
       <version>${junit.platform.launcher}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+      <version>4.0.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.11.3</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
