--- a/src/main/resources/stock.conf
+++ b/src/main/resources/stock.conf
@@ -3837,224 +3837,85 @@ soi {
     name = "Capri Holdings Limited"
     simple_name = "Capri Holdings"
   }
-  STB {
-    instrument = ${I}/67e2d3b6-ff3e-4c8d-b2ca-8aed5f867fab/
-    name = "Student Transportation, Inc"
-    simple_name = "to make Util.readOrderHistory happy"
+  USO {
+    instrument = ${I}/01f33471-51d9-4afe-850f-b5f13d58c459/
+    name = "United States Oil Fund"
+    simple_name = "United States Oil Fund"
   }
-  MMLP {
-    instrument = ${I}/f6b35900-cd9c-4ce0-9f85-7c1828e39c8f/
-    name = "Martin Midstream Partners L.P. Limited Partnership"
-    simple_name = "to make Util.readOrderHistory happy"
+  GLD {
+    instrument = ${I}/90999f47-19d4-4bdf-91d7-2bf3733a3fcf/
+    name = "SPDR Gold Trust, SPDR Gold Shares"
+    simple_name = "SPDR Gold Trust"
   }
-  DRYS {
-    instrument = ${I}/75b27094-98ac-4917-ab99-dc22013bd7e8/
-    name = "Dryships, Inc. Common Stock"
-    simple_name = "to make Util.readOrderHistory happy"
-  }
-  OCLR {
-    instrument = ${I}/9b86528a-6687-46d8-af1a-8677e744ff40/
-    name = "Oclaro"
-    simple_name = "to make Util.readOrderHistory happy"
-  }
-  ASX {
-    instrument = ${I}/32babef3-cd96-4dd8-8299-01e9dc302e3b/
-    name = "Advanced Semiconductor"
-    simple_name = "to make Util.readOrderHistory happy"
-  }
-  TEUM {
-    instrument = ${I}/544a79d6-8599-4131-a367-ffce07d74ab9/
-    name = "Pareteum"
-    simple_name = "to make Util.readOrderHistory happy"
-  }
-  APRI {
-    instrument = ${I}/de2ad6b1-99dc-419e-8305-8c5eee3146a0/
-    name = "Apricus"
-    simple_name = "to make Util.readOrderHistory happy"
-  }
-  PEGI {
-    instrument = ${I}/98930fa4-0810-46cd-95be-a83d69ca21a8/
-    name = "Pattern Energy Group, Inc"
-    simple_name = "to make Util.readOrderHistory happy"
-  }
-  DDR {
-    instrument = ${I}/75b21780-2b0b-4159-8019-e2abb82cd9a3/
-    name = "..."
-    simple_name = "to make Util.readOrderHistory happy"
-  }
-  KGC {
-    instrument = ${I}/67162456-b1aa-488e-9e66-07d7fd4ecbac/
-    name = "..."
-    simple_name = "to make Util.readOrderHistory happy"
-  }
-  TSEM {
-    instrument = ${I}/cbd02cf6-25e2-470a-bbb0-e9fd76d6707f/
-    name = "..."
-    simple_name = "to make Util.readOrderHistory happy"
-  }
-  BKCC {
-    instrument = ${I}/481b601c-34b2-4077-9f89-a3f20101b663/
-    name = "BlackRock Capital Investment"
-    simple_name = "to make Util.readOrderHistory happy"
-  }
-  LKSD {
-    instrument = ${I}/1c006623-8efe-4bba-bbce-191553e4f41d/
-    name = "..."
-    simple_name = "to make Util.readOrderHistory happy"
-  }
-  FLEX {
-    instrument = ${I}/aa3f14f6-7dcb-49df-9737-9443f8364a7b/
-    name = "Flex"
-    simple_name = "to make Util.readOrderHistory happy"
-  }
-  AI {
-    instrument = ${I}/2ccdda26-cb88-48ad-9419-fa5b74d75834/
-    name = "..."
-    simple_name = "to make Util.readOrderHistory happy"
-  }
-  MZA {
-    instrument = ${I}/6e8628c9-75d0-44d4-8a1b-32e6939549d3/
-    name = "..."
-    simple_name = "to make Util.readOrderHistory happy"
-  }
-  BB {
-    instrument = ${I}/62823dfa-199d-4b1d-9842-b34ce40485bd/
-    name = "BlackBerry"
-    simple_name = "to make Util.readOrderHistory happy"
-  }
-  FRBA {
-    instrument = ${I}/4091ef7d-3122-4aa9-85d2-0e71ec8c65c1/
-    name = "First Bank"
-    simple_name = "to make Util.readOrderHistory happy"
-  }
-  CHMI {
-    instrument = ${I}/94d82b67-d0e7-4946-ab0b-bbdb59778530/
-    name = "Cherry Hill"
-    simple_name = "to make Util.readOrderHistory happy"
-  }
-  BKS {
-    instrument = ${I}/8dc2970f-2632-4ece-a25f-496614166799/
-    name = "Barnes & Noble"
-    simple_name = "to make Util.readOrderHistory happy"
-  }
-  ADES {
-    instrument = ${I}/5c074821-62af-4d3f-883c-5ebba1ddddee/
-    name = "Advanced Emissions"
-    simple_name = "to make Util.readOrderHistory happy"
-  }
-  BNJ {
-    instrument = ${I}/cdd03456-ec70-4951-bfe7-d1051244837a/
-    name = "BlackRock NJ"
-    simple_name = "to make Util.readOrderHistory happy"
-  }
-  TFSL {
-    instrument = ${I}/fe7cfacc-8419-4e0d-994d-47d6315904d6/
-    name = "..."
-    simple_name = "to make Util.readOrderHistory happy"
-  }
-  HZNP {
-    instrument = ${I}/7111af93-abe0-4d4d-83fe-3a791fce7c5f/
-    name = "..."
-    simple_name = "to make Util.readOrderHistory happy"
-  }
-  BHC {
-    instrument = ${I}/9a02028d-f296-418a-b061-7a3b40981d9e/
-    name = "..."
-    simple_name = "to make Util.readOrderHistory happy"
-  }
-  BGFV {
-    instrument = ${I}/a1da9619-a8d4-46a3-9dc6-d1f9c1cb67a5/
-    name = "..."
-    simple_name = "to make Util.readOrderHistory happy"
-  }
-  BPFH {
-    instrument = ${I}/c73aa37d-aa6b-4b6b-b939-e634bd7b17b7/
-    name = "..."
-    simple_name = "to make Util.readOrderHistory happy"
-  }
-  NEWM {
-    instrument = ${I}/19520986-989b-4332-9743-33da5cc3db20/
-    name = "..."
-    simple_name = "to make Util.readOrderHistory happy"
-  }
-  RRD {
-    instrument = ${I}/b6b5d7a2-6273-4900-81f3-10befeb16f6b/
-    name = "..."
-    simple_name = "to make Util.readOrderHistory happy"
-  }
-  AMTD {
-    instrument = ${I}/cbffa785-591c-49fa-8139-16d4558ae6ac/
-    name = "..."
-    simple_name = "to make Util.readOrderHistory happy"
-  }
-  CREE {
-    instrument = ${I}/d74bc6a7-4c24-4c13-8e61-3178d6e06511/
-    name = "..."
-    simple_name = "to make Util.readOrderHistory happy"
-  }
-  INAP {
-    instrument = ${I}/14290213-51ba-4678-8e3d-0f642381d26c/
-    name = "..."
-    simple_name = "to make Util.readOrderHistory happy"
-  }
-  ANY {
-    instrument = ${I}/e97b7135-7cda-4786-84f2-a526fa2c6a7e/
-    name = "..."
-    simple_name = "to make Util.readOrderHistory happy"
+  UVXY {
+    instrument = ${I}/16543bbd-47df-4ff3-a743-11ff0901743f/
+    name = "ProShares Ultra VIX Short-Term Futures ET"
+    simple_name = "ProShares Ultra VIX Short-Term Futures ET"
   }
   MYGN {
     instrument = ${I}/8ef53e16-f09c-4bb5-a346-9e7af5377b0b/
-    name = "..."
-    simple_name = "to make Util.readOrderHistory happy"
+    name = "Myriad Genetics, Inc. Common Stock"
+    simple_name = "Myriad Genetics"
   }
-  CNSL {
-    instrument = ${I}/5a371e45-bf7e-49da-8d46-4dc92dc84bcc/
-    name = "..."
-    simple_name = "to make Util.readOrderHistory happy"
+  STMP {
+    instrument = ${I}/b50331d4-0179-4022-ac37-4576cfd27080/
+    name = "Stamps.com Inc.  Common Stock ($0.001 Par Value)"
+    simple_name = "Stamps.com"
   }
-  BGS {
-    instrument = ${I}/465f43e7-1480-496c-bf6b-ebcad94245c8/
-    name = "..."
-    simple_name = "to make Util.readOrderHistory happy"
+  BHC {
+    instrument = ${I}/9a02028d-f296-418a-b061-7a3b40981d9e/
+    name = "BauschHealth"
+    simple_name = "BauschHealth"
   }
-  GTXI {
-    instrument = ${I}/20fa92db-6c3b-4754-9073-df9a85ea486e/
-    name = "..."
-    simple_name = "to make Util.readOrderHistory happy"
+  BABA {
+    instrument = ${I}/b2e06903-5c44-46a4-bd42-2a696f9d68e1/
+    name = "Alibaba"
+    simple_name = "Alibaba"
   }
-  WAC {
-    instrument = ${I}/7dcf676f-2321-448d-bbe8-7512dde43c4c/
-    name = "..."
-    simple_name = "to make Util.readOrderHistory happy"
+  JD {
+    instrument = ${I}/b1e0ba21-bf54-454a-a409-89fe275bbe05/
+    name = "JD.com"
+    simple_name = "JD.com"
   }
-  NVMI {
-    instrument = ${I}/ca7cab7f-80eb-4c25-a112-992ebb717f39/
-    name = "..."
-    simple_name = "to make Util.readOrderHistory happy"
+  AI {
+    instrument = ${I}/2ccdda26-cb88-48ad-9419-fa5b74d75834/
+    name = "Arlington Asset Investment"
+    simple_name = "Arlington Asset Investment"
   }
-  MGP {
-    instrument = ${I}/491f0f4b-69e7-4f1d-aa58-91cad9dd5ba1/
-    name = "..."
-    simple_name = "to make Util.readOrderHistory happy"
+  CMPR {
+    instrument = ${I}/91b20d2b-c8a2-444b-8575-a5941edf4aa9/
+    name = "Cimpress"
+    simple_name = "Cimpress"
   }
-  TSM {
-    instrument = ${I}/ca4821f9-06c3-4c22-bbb8-efe569f23d2b/
-    name = "..."
-    simple_name = "to make Util.readOrderHistory happy"
+  KEM {
+    instrument = ${I}/2a78ff32-e4c2-4e5b-a534-3bc5f917aa3c/
+    name = "Kemet"
+    simple_name = "Kemet"
   }
-  OFS {
-    instrument = ${I}/8768b31c-e27c-4582-9464-c69548fe2f6a/
-    name = "..."
-    simple_name = "to make Util.readOrderHistory happy"
+  TME {
+    instrument = ${I}/2fa782f3-b41b-4f1f-85a4-c434861f856f/
+    name = "Tencent Music Entertainment"
+    simple_name = "Tencent Music Entertainment"
   }
-  PLUG {
-    instrument = ${I}/ef99a2c4-adb2-4163-a2df-2d5722cc75b7/
-    name = "..."
-    simple_name = "to make Util.readOrderHistory happy"
-  }                         
-  CVA {
-    instrument = ${I}/d9ce886d-6b14-4dc9-ba21-cf3e280eb1f3/
-    name = "..."
-    simple_name = "to make Util.readOrderHistory happy"
+  SNE {
+    instrument = ${I}/2fb13c63-fff5-4fab-9d17-8c84da973bbf/
+    name = "Sony Corporation ADS"
+    simple_name = "Sony Corporation ADS"
   }
+  AU {
+    instrument = ${I}/372cd774-b888-4095-8dc3-452524f59761/
+    name = "AngloGold Ashanti"
+    simple_name = "AngloGold Ashanti"
+  }
+  APHA {
+    instrument = ${I}/1d7d38e7-cf2d-4efa-93b0-490a627788a6/
+    name = "Aphria"
+    simple_name = "Aphria"
+  }
+  AMN {
+    instrument = ${I}/82c77fc8-634d-44a0-bbfb-ddc91a014d1c/
+    name = "AMN healthcare"
+    simple_name = "AMN healthcare"
+  }
+
 }
