--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,9 @@
     <scala.version>${scala.version.major}.${scala.version.minor}</scala.version>
     <akka.version>2.5.20</akka.version>
     <akka.http.version>10.1.7</akka.http.version>
-    <sttp.version>1.5.6</sttp.version>
+    <sttp.version>1.5.9</sttp.version>
     <jetty.version>9.4.14.v20181114</jetty.version>
-    <junit.version>5.3.2</junit.version>
+    <junit.version>5.4.0</junit.version>
     <junit.platform.launcher>1.3.2</junit.platform.launcher>
   </properties>
 
@@ -83,6 +83,11 @@
       <artifactId>logback-classic</artifactId>
       <version>1.2.3</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+      <version>4.0.1</version>
+    </dependency>
 
     <dependency>
       <groupId>com.softwaremill.sttp</groupId>
@@ -110,12 +115,6 @@
       <groupId>org.junit.platform</groupId>
       <artifactId>junit-platform-launcher</artifactId>
       <version>${junit.platform.launcher}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.poi</groupId>
-      <artifactId>poi-ooxml</artifactId>
-      <version>4.0.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -150,7 +149,7 @@
       <plugin>
         <groupId>net.alchim31.maven</groupId>
         <artifactId>scala-maven-plugin</artifactId>
-        <version>3.4.4</version>
+        <version>3.4.6</version>
         <executions>
           <execution>
             <goals>
@@ -160,7 +159,6 @@
           </execution>
         </executions>
         <configuration>
-          <scalaVersion>${scala.version}</scalaVersion>
           <args>
             <arg>-unchecked</arg>
             <arg>-Ypartial-unification</arg>
@@ -191,7 +189,7 @@
                 </transformer>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <manifestEntries>
-                    <Main-Class>home.Main</Main-Class>
+                    <Main-Class>home.GenerateExcel</Main-Class>
                   </manifestEntries>
                 </transformer>
               </transformers>
