--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -23,4 +23,10 @@ akka.http {
     # Akka stores a cookie paradoxGroups: {"language":"group-scala"} which Akka emits a warning when parsing.
     ignore-illegal-header-for = [Cookie]
   }
+
+  client {
+    socket-options {
+      tcp-keep-alive = true
+    }
+  }
 }
